# noodleworks

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
boundhound/: README.md  pyproject.toml  requirements.txt
boundhound/boundhound/: __init__.py  branch_and_bound.py  simplex.py  types.py  visualization.py
boundhound/boundhound/core/: __init__.py  basis.py  problem.py
boundhound/examples/: knapsack.ipynb
boundhound/src/boundhound/: branch_and_bound.py  simplex.py  types.py  visualization.py
boundhound/src/boundhound/core/: __init__.py  basis.py  problem.py
boundhound/tests/: test_basis.py  test_branch_and_bound.py  test_simplex.py  test_standard_form.py
tinytorch/: Makefile  README.md  pyproject.toml  requirements.txt
tinytorch/examples/: classifier.ipynb
tinytorch/src/tinytorch/: __init__.py  engine.py  nn.py  visualization.py
tinytorch/tests/: conftest.py  test_activations.py  test_arithmetic.py  test_backprop.py  test_casting.py  test_core.py  test_nn.py
tinytorch/tinytorch/: __init__.py  engine.py  nn.py  visualization.py
tokenator/: README.md
