[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boundhound"
version = "0.1.0"
description = "A minimal Gurobi-like MILP optimization framework"
requires-python = ">=3.11"
dependencies = ["numpy", "graphviz"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ruff",
    "mypy",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["src/boundhound"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["N806", "N803", "PLR0913"]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
per-file-ignores = {"tests/*" = ["PLR2004"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-branch"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
